added topology.bitLength updated topology.k in mainConfig

--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -1,6 +1,7 @@
 {
     "topology": {
-        "k": 48,
+        "bitLength": 160,
+        "k": 20,
         "bucketStore": {
             "databasePath": "db"
         }
