--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -11,5 +11,12 @@
         "connectionRetrySeconds": 4,
         "idleConnectionKillTimeout": 30,
         "myOpenPorts": [30415]
+    },
+    "protocol": {
+        "nessages": {
+            "maxByteLenghtPerMessage": 1048576,
+            "msToKeepNonAddressableMemory": 10000,
+            "msToWaitForIncomingMessage": 10000
+        }
     }
 }
