--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -18,5 +18,9 @@
             "msToKeepNonAddressableMemory": 10000,
             "msToWaitForIncomingMessage": 10000
         }
+    },
+    "plugin": {
+        "folderPath": "plugin",
+        "pluginConfigName": "plugin.json"
     }
 }
