added app.dataPath to mainConfig https://github.com/rogerwang/node-webkit/wiki/App#datapath

--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -22,5 +22,8 @@
     "plugin": {
         "folderPath": "plugin",
         "pluginConfigName": "plugin.json"
+    },
+    "app": {
+        "dataPath": "dataPathFolder"
     }
 }
