fixed package jsons

--- a/src/package.json
+++ b/src/package.json
@@ -8,6 +8,7 @@
     "show_in_taskbar": false
   },
   "dependencies": {
+    "fs-extra": "^0.8.1",
     "node-lmdb": "^0.2.1",
     "follow-redirects": "*"
   }
