added elastic search server. wip…

--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -28,5 +28,10 @@
     },
     "app": {
         "dataPath": "dataPathFolder"
+    },
+    "search": {
+        "host": "localhost",
+        "port": 9200,
+        "binaryPath": "core/search/elasticsearch"
     }
 }
