--- a/src/package.json
+++ b/src/package.json
@@ -8,6 +8,7 @@
     "show_in_taskbar": false
   },
   "dependencies": {
+    "elasticsearch": "^2.1.4",
     "follow-redirects": "*",
     "fs-extra": "^0.8.1",
     "microtime": "^0.5.1",
