updated FolderWatcher, added a couple of path related interfaces and updated dependencies

--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -45,5 +45,12 @@
         "binaryPath"       : "core/search/elasticsearch",
         "databasePath"     : "db/searchStore",
         "searchStoreConfig": "./config/searchStore.json"
+    },
+    "fs": {
+        "folderWatcher": {
+            "interval": 1000,
+            "binaryInterval": 5000,
+            "eventDelay": 1000
+        }
     }
 }
