added elasticsearch-pid to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ node_modules
 .idea/
 /build/coverage.html
 /test/fixtures/core/utils/JSONStateHandler/save/
+/src/bin/core/search/elasticsearch-pid
