--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -2,6 +2,7 @@
     "topology": {
         "bitLength"  : 160,
         "k"          : 20,
+        "alpha"      : 3,
         "bucketStore": {
             "databasePath": "db"
         }
@@ -15,20 +16,24 @@
     },
     "protocol": {
         "waitForNodeReactionInSeconds": 2,
-        "messages": {
+        "messages"                    : {
             "maxByteLengthPerMessage"      : 1048576,
             "msToKeepNonAddressableMemory" : 10000,
             "msToWaitForIncomingMessage"   : 10000,
             "maxSecondsToWaitForConnection": 4
         },
-        "proxy": {
-            "maxNumberOfProxies": 10,
-            "proxyForMaxNumberOfNodes": 2,
-            "maxUnsuccessfulProxyTries": 4,
+        "proxy"                       : {
+            "maxNumberOfProxies"                   : 10,
+            "proxyForMaxNumberOfNodes"             : 2,
+            "maxUnsuccessfulProxyTries"            : 4,
             "unsuccessfulProxyTryWaitTimeInSeconds": 30
         },
-        "pingpong": {
+        "pingpong"                    : {
             "maxWaitingListSize": 20
+        },
+        "findClosestNodes"            : {
+            "cycleExpirationInSeconds" : 2,
+            "parallelismDelayInSeconds": 3
         }
     },
     "plugin"  : {
@@ -46,11 +51,11 @@
         "databasePath"     : "db/searchStore",
         "searchStoreConfig": "./config/searchStore.json"
     },
-    "fs": {
+    "fs"      : {
         "folderWatcher": {
-            "interval": 1000,
+            "interval"      : 1000,
             "binaryInterval": 5000,
-            "eventDelay": 1000
+            "eventDelay"    : 1000
         }
     }
 }
