--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test": "grunt test"
   },
   "dependencies": {
+    "fs-extra": "^0.8.1"
   },
   "devDependencies": {
     "blanket": "~1.1.5",
