--- a/src/package.json
+++ b/src/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "chokidar": "^0.8.2",
+    "elastic.js": "^1.1.1",
     "elasticsearch": "^2.1.4",
     "follow-redirects": "*",
     "fs-extra": "^0.8.1",
