--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -66,5 +66,12 @@
             "binaryInterval": 5000,
             "eventDelay"    : 1000
         }
+    },
+    "nodeDiscovery": {
+        "httpServerList": [{
+            "hostname": "www.google.com",
+            "port": 80,
+            "path": "/"
+        }]
     }
 }
