--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "fs-extra": "^0.8.1"
+    "fs-extra": "^0.8.1",
+    "stack-trace": "0.0.9"
   },
   "devDependencies": {
     "blanket": "~1.1.5",
