--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -34,6 +34,9 @@
         "findClosestNodes"            : {
             "cycleExpirationInSeconds" : 2,
             "parallelismDelayInSeconds": 3
+        },
+        "networkMaintenance": {
+            "bucketRefreshRateInSeconds": 3600
         }
     },
     "plugin"  : {
