--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "fs-extra": "^0.8.1",
-    "stack-trace": "0.0.9"
+    "fs-extra": "^0.8.1"
   },
   "devDependencies": {
     "blanket": "~1.1.5",
