--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -10,20 +10,20 @@
     "net"     : {
         "allowHalfOpenSockets"     : false,
         "connectionRetrySeconds"   : 4,
-        "idleConnectionKillTimeout": 30,
+        "idleConnectionKillTimeout": 5,
         "outboundConnectionTimeout": 2000,
-        "myOpenPorts"              : [30415]
+        "myOpenPorts"              : []
     },
     "protocol": {
-        "waitForNodeReactionInSeconds": 2,
+        "waitForNodeReactionInSeconds": 1,
         "messages"                    : {
             "maxByteLengthPerMessage"      : 1048576,
             "msToKeepNonAddressableMemory" : 10000,
-            "msToWaitForIncomingMessage"   : 10000,
-            "maxSecondsToWaitForConnection": 4
+            "msToWaitForIncomingMessage"   : 2000,
+            "maxSecondsToWaitForConnection": 2.1
         },
         "proxy"                       : {
-            "maxNumberOfProxies"                   : 10,
+            "maxNumberOfProxies"                   : 3,
             "proxyForMaxNumberOfNodes"             : 2,
             "maxUnsuccessfulProxyTries"            : 4,
             "unsuccessfulProxyTryWaitTimeInSeconds": 30
@@ -33,7 +33,7 @@
         },
         "findClosestNodes"            : {
             "cycleExpirationInSeconds" : 2,
-            "parallelismDelayInSeconds": 3
+            "parallelismDelayInSeconds": 1.5
         },
         "networkMaintenance": {
             "bucketRefreshRateInSeconds": 3600
@@ -49,7 +49,7 @@
         }
     },
     "app"     : {
-        "dataPath": "dataPathFolder"
+        "dataPath": "/Volumes/HDD/Users/Johnny/Documents/node/abschluss_app/src/config"
     },
     "search"  : {
         "host"             : "localhost",
