--- a/src/package.json
+++ b/src/package.json
@@ -23,6 +23,7 @@
     "usb-detection": "^1.0.3",
     "winston": "^0.7.3",
     "winston-irc": "^0.3.4",
-    "ws": "^0.4.31"
+    "ws": "^0.4.31",
+    "longjohn": "*"
   }
 }
