--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,5 @@ node_modules
 /src/bin/core/search/elasticsearch-pid
 /utils/apacheTikaMimeTypesParser/fileTypes.json
 /utils/topologyTestRunner/zmap-results.json
-/utils/topologyTestRunner/configBuilder.pyc
+/utils/topologyTestRunner/node-webkit
 *.pyc
