updated UiManager, UiComponent, UiFolderWatcherManagerComponent and tests

--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -85,6 +85,7 @@
                 "publicPath": "public"
             },
             "socketServer": {
+                "parser": "JSON",
                 "port": 8080,
                 "transformer": "websockets"
             }
