--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -59,7 +59,8 @@
         },
         "circuit": {
             "extensionReactionTimeBaseInSeconds": 3,
-            "extensionReactionTimeFactor": 1.2
+            "extensionReactionTimeFactor": 1.2,
+            "maximumExtensionRetries": 3
         }
     },
     "plugin"  : {
