added plugin.binaryPath to mainConfig and pluginRunner/node binary

--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -47,27 +47,28 @@
             "republishInSeconds"      : 3600
         }
     },
-    "hydra": {
+    "hydra"   : {
         "keepMessageInPipelineForSeconds": 4,
-        "waitForReconnectInSeconds": 4.5,
-        "retryConnectionMax": 2,
-        "additiveSharingNodeAmount": 4,
-        "nodePicker": {
-            "allowIdenticalIps": false,
-            "roundThreshold": 2,
+        "waitForReconnectInSeconds"      : 4.5,
+        "retryConnectionMax"             : 2,
+        "additiveSharingNodeAmount"      : 4,
+        "nodePicker"                     : {
+            "allowIdenticalIps"   : false,
+            "roundThreshold"      : 2,
             "waitingTimeInSeconds": 3,
-            "errorThreshold": 5
+            "errorThreshold"      : 5
         },
-        "circuit": {
+        "circuit"                        : {
             "extensionReactionTimeBaseInSeconds": 3,
-            "extensionReactionTimeFactor": 1.2,
-            "maximumExtensionRetries": 3
+            "extensionReactionTimeFactor"       : 1.2,
+            "maximumExtensionRetries"           : 3
         }
     },
     "plugin"  : {
-        "folderPath"              : "plugin",
+        "folderPath"              : "plugins",
         "pluginConfigName"        : "plugin.json",
         "pluginManagerStateConfig": "pluginManager.json",
+        "binaryPath"              : "core/plugin/pluginRunner/node",
         "api"                     : {
             "basePath"     : "core/plugin/api",
             "pluginApiName": "PluginApi.js"
@@ -98,12 +99,12 @@
     "ui"      : {
         "UiManager": {
             "staticServer": {
-                "port": 7474,
+                "port"      : 7474,
                 "publicPath": "public"
             },
             "socketServer": {
-                "parser": "JSON",
-                "port": 8080,
+                "parser"     : "JSON",
+                "port"       : 8080,
                 "transformer": "websockets"
             }
         }
