CellManager: documented / not yet tested

--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -53,6 +53,7 @@
         "minimumNumberOfRelayNodes": 3,
         "maximumNumberOfRelayNodes": 5,
         "additiveSharingNodeAmount": 4,
+        "waitForAdditiveBatchFinishInSeconds": 3,
         "nodePicker": {
             "allowIdenticalIps": false,
             "roundThreshold": 2,
