--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -64,6 +64,9 @@
             "extensionReactionTimeBaseInSeconds": 3,
             "extensionReactionTimeFactor": 1.2,
             "maximumExtensionRetries": 3
+        },
+        "cell": {
+            "extensionReactionInSeconds": 3
         }
     },
     "plugin"  : {
