--- a/src/package.json
+++ b/src/package.json
@@ -25,6 +25,7 @@
     "winston-irc": "^0.3.4",
     "ws": "^0.4.31",
     "primus.io": "^3.1.1",
-    "buffertools": "^2.1.2"
+    "buffertools": "^2.1.2",
+    "json-stable-stringify": "^1.0.0"
   }
 }
