--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -91,6 +91,7 @@
         "binaryPath"       : "core/search/elasticsearch",
         "databasePath"     : "db/searchStore",
         "searchStoreConfig": "./config/searchStore.json",
+        "apiVersion"       : "1.2",
         "pidFilename"      : "elasticsearch-pid",
         "indexManager"     : {
             "indexRunnerDelayInMilliSeconds": 10000,
