--- a/src/package.json
+++ b/src/package.json
@@ -9,23 +9,23 @@
     "show_in_taskbar": true
   },
   "dependencies": {
+    "buffertools": "^2.1.2",
     "chokidar": "^0.8.2",
     "elastic.js": "^1.1.1",
     "elasticsearch": "^2.1.4",
     "follow-redirects": "*",
     "fs-extra": "^0.8.1",
+    "json-stable-stringify": "^1.0.0",
     "microtime": "^0.6.0",
     "mime": "^1.2.11",
     "node-lmdb": "^0.2.1",
     "node-static": "^0.7.3",
+    "primus.io": "^3.1.1",
     "sandcastle": "https://github.com/joernroeder/sandcastle/tarball/master",
     "stack-trace": "0.0.9",
     "usb-detection": "^1.0.3",
     "winston": "^0.7.3",
     "winston-irc": "^0.3.4",
-    "ws": "^0.4.31",
-    "primus.io": "^3.1.1",
-    "buffertools": "^2.1.2",
-    "json-stable-stringify": "^1.0.0"
+    "ws": "^0.4.31"
   }
 }
