added plugin timeout to config

--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -87,6 +87,7 @@
         "pluginConfigName"        : "plugin.json",
         "pluginManagerStateConfig": "pluginManager.json",
         "binaryPath"              : "core/plugin/pluginRunner/node",
+        "timeoutInSeconds": 30,
         "api"                     : {
             "basePath"     : "core/plugin/api",
             "pluginApiName": "PluginApi.js"
