--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -58,6 +58,10 @@
         },
         "response": {
             "waitForOwnResponseAsBroadcastInitiatorInSeconds": 2
+        },
+        "shareMessaging": {
+            "waitForResponseMessageInSeconds": 20,
+            "maximumNumberOfMessageTries": 2
         }
     },
     "hydra": {
