--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -103,6 +103,7 @@
         "databasePath"     : "db/searchStore",
         "searchStoreConfig": "./config/searchStore.json",
         "pidFilename"      : "elasticsearch-pid",
+        "searchFormStateConfig": "searchFormManager.json",
         "indexManager"     : {
             "indexRunnerDelayInMilliSeconds": 10000,
             "indexRunnersInParallel"        : 3
