--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -93,6 +93,7 @@
         "pluginManagerStateConfig": "pluginManager.json",
         "binaryPath"              : "core/plugin/pluginRunner/node",
         "timeoutInSeconds": 30,
+        "pluginRunnerChunkSize": 512,
         "api"                     : {
             "basePath"     : "core/plugin/api",
             "pluginApiName": "PluginApi.js"
