added download destination handling to DownloadManager

--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -104,6 +104,9 @@
     "app"     : {
         "dataPath": "appDataFolder"
     },
+    "share" : {
+        "downloadManagerStateConfig": "downloadManager.json"
+    },
     "search"  : {
         "host"             : "localhost",
         "port"             : 9200,
