--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -53,7 +53,7 @@
     "fileTransfer": {
         "maximumNumberOfParallelDownloads": 10,
         "maximumNumberOfParallelUploads": 10,
-        "uploadBlockSizeInBytes": 204800,
+        "uploadBlockSizeInBytes": 1024000,
         "query": {
             "broadcastValidityInSeconds": 30,
             "minimumNumberOfReadyCircuits": 1,
@@ -69,7 +69,7 @@
     },
     "hydra": {
         "desiredNumberOfCircuits": 3,
-        "maximumNumberOfMaintainedCells": 20,
+        "maximumNumberOfMaintainedCells": 30,
         "minimumNumberOfRelayNodes": 3,
         "maximumNumberOfRelayNodes": 4,
         "additiveSharingNodeAmount": 4,
