heartbeat config update

--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -11,6 +11,7 @@
         "allowHalfOpenSockets"     : false,
         "connectionRetrySeconds"   : 4,
         "idleConnectionKillTimeout": 5,
+        "heartbeatTimeout"         : 2,
         "outboundConnectionTimeout": 2000,
         "myOpenPorts"              : [],
 
