increased search client request timeout limit

--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -112,6 +112,7 @@
     "search"  : {
         "host"             : "localhost",
         "port"             : 9200,
+        "requestTimeoutInSeconds"   : 60,
         "binaryPath"       : "core/search/elasticsearch",
         "databasePath"     : "db/searchStore",
         "searchStoreConfig": "./config/searchStore.json",
