--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -95,6 +95,7 @@
         "folderPath"              : "plugin",
         "pluginConfigName"        : "plugin.json",
         "pluginManagerStateConfig": "pluginManager.json",
+        "pluginManagerMaxFileBufferInMegaBytes": 50,
         "binaryPath"              : "core/plugin/pluginRunner/node_v0_10_30",
         "timeoutInSeconds": 30,
         "pluginRunnerChunkSize": 512,
