added logger path to app

--- a/src/config/environmentConfig.json
+++ b/src/config/environmentConfig.json
@@ -4,5 +4,8 @@
         "startSearchDatabase": false,
         "startIndexer": false,
         "startTopology": true
+    },
+    "logger": {
+        "filePath": "/Volumes/HDD/logs"
     }
 }
