--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -49,7 +49,8 @@
         },
         "nodeDiscovery"               : {
             "iterativeSeekTimeoutInMs": 1500,
-            "republishInSeconds"      : 3600
+            "republishInSeconds"      : 3600,
+            "nodeSeekerFactoryStateConfig": "nodeDiscovery.json"
         }
     },
     "fileTransfer": {
@@ -105,7 +106,8 @@
         }
     },
     "app"     : {
-        "dataPath": "appDataFolder"
+        "dataPath": "appDataFolder",
+        "internalDataPath": "appDataFolder"
     },
     "share" : {
         "downloadManagerStateConfig": "downloadManager.json"
@@ -135,7 +137,8 @@
             "binaryInterval": 15000,
             "eventDelay"    : 1000,
             "usePolling"    : false
-        }
+        },
+        "folderWatcherManagerStateConfig": "folderWatcherManager.json"
     },
     "ui"      : {
         "UiManager": {
