added initial state folder and updated main config

--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -107,7 +107,7 @@
     },
     "app"     : {
         "dataPath": "appDataFolder",
-        "internalDataPath": "appDataFolder"
+        "internalDataPath": "initialState"
     },
     "share" : {
         "downloadManagerStateConfig": "downloadManager.json"
