FolderWatcher:usePolling = true

--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -136,7 +136,7 @@
             "interval"      : 5000,
             "binaryInterval": 15000,
             "eventDelay"    : 1000,
-            "usePolling"    : false
+            "usePolling"    : true
         },
         "folderWatcherManagerStateConfig": "folderWatcherManager.json"
     },
