updated environment config

--- a/src/config/environmentConfig.json
+++ b/src/config/environmentConfig.json
@@ -1,8 +1,8 @@
 {
     "environment": {
         "startUi": false,
-        "startSearchDatabase": false,
-        "startIndexer": false,
+        "startSearchDatabase": true,
+        "startIndexer": true,
         "startTopology": true
     },
     "logger": {
