updated aboutWindow and improved update notifications

--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -107,7 +107,8 @@
     },
     "app"     : {
         "dataPath": "appDataFolder",
-        "internalDataPath": "initialState"
+        "internalDataPath": "initialState",
+        "checkForUpdatesOnStartup": true
     },
     "share" : {
         "downloadManagerStateConfig": "downloadManager.json"
