--- a/src/package.json
+++ b/src/package.json
@@ -2,7 +2,7 @@
   "name": "Peeriod",
   "description": "Bleeding Edge Anonymous File Sharing",
   "version": "0.0.1",
-  "versionCheckUrl": "http://johnnycrab.com/data/peeriodVersionCheck.json",
+  "versionCheckUrl": "https://peeriodproject.github.io/peeriodVersionCheck.json",
   "main": "index.html",
   "no-edit-menu": true,
   "window": {
