--- a/src/config/mainConfig.json
+++ b/src/config/mainConfig.json
@@ -56,7 +56,7 @@
     "fileTransfer": {
         "maximumNumberOfParallelDownloads": 10,
         "maximumNumberOfParallelUploads": 10,
-        "uploadBlockSizeInBytes": 1024000,
+        "uploadBlockSizeInBytes": 512000,
         "query": {
             "broadcastValidityInSeconds": 60,
             "minimumNumberOfReadyCircuits": 1,
@@ -72,7 +72,7 @@
     },
     "hydra": {
         "desiredNumberOfCircuits": 6,
-        "maximumNumberOfMaintainedCells": 80,
+        "maximumNumberOfMaintainedCells": 30,
         "minimumNumberOfRelayNodes": 3,
         "maximumNumberOfRelayNodes": 4,
         "additiveSharingNodeAmount": 4,
