--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "abschluss_app",
-  "version": "0.0.1",
+  "name": "peeriod-core",
+  "version": "0.1.0",
   "author": [
     {
       "name": "Jonathan Pirnay",
